# PulseRadar

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  README-EN.md  README.md  conftest.py  coverage.xml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_webui.py
.github/workflows/: crawler.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: config.yaml
docker/: Caddyfile.reports  Dockerfile  Dockerfile.mcp  docker-compose-public-viewer.yml  manage.py
docs/: PROJECT_ARCHITECTURE.md  REFACTOR_PLAN.md  index.html  workflow_ui_change_log_2026-02-09.md
mcp_server/: server.py
mcp_server/services/: cache_service.py  data_service.py  parser_service.py
mcp_server/tools/: analytics.py  article_reader.py  config_mgmt.py  data_query.py  search_tools.py  storage_sync.py  system.py
mcp_server/utils/: date_parser.py  errors.py  validators.py
output/: index.html
output/news/: 2026-02-04.db
output/rss/: 2026-02-04.db
reports/: archive.html  feed.xml  manifest.json
reports/2026-04-17/: 00-55.html  02-43.html  04-10.html  05-11.html  06-07.html  07-09.html  08-05.html  11-52.html  14-20.html  16-13.html  17-54.html  19-31.html  20-10.html  22-03.html  23-37.html
reports/2026-04-18/: 01-14.html  02-12.html  03-38.html  05-10.html  06-06.html  07-08.html  08-04.html  11-36.html  13-57.html  15-42.html  17-12.html  18-07.html  19-08.html  19-58.html  21-40.html  23-06.html
reports/2026-04-19/: 00-01.html  01-05.html  02-02.html  03-23.html  03-59.html  05-02.html  05-58.html  07-03.html  08-01.html  11-55.html  14-15.html  15-54.html  17-13.html  18-08.html  19-08.html  19-58.html  21-39.html  23-06.html
reports/2026-04-20/: 00-02.html  01-06.html  02-02.html  03-23.html  04-00.html  05-03.html  05-59.html  07-04.html  08-02.html  11-58.html  14-32.html  16-37.html  19-04.html  20-47.html  23-03.html
reports/2026-04-21/: 00-41.html  02-34.html  04-10.html  05-11.html  06-09.html  07-09.html  08-06.html  11-51.html  14-20.html  16-17.html  18-00.html  19-38.html  22-16.html  23-52.html
reports/2026-04-22/: 01-34.html  03-45.html  05-11.html  06-08.html  07-08.html  08-02.html  11-47.html  14-19.html  16-16.html  18-01.html  19-38.html  22-16.html  23-55.html
reports/2026-04-23/: 01-33.html  02-42.html  04-31.html  05-28.html  06-10.html  07-26.html  08-10.html  11-54.html  14-24.html  16-19.html  18-05.html  19-40.html  22-20.html
reports/2026-04-24/: 00-17.html  01-53.html  03-50.html  05-13.html  06-08.html  07-13.html  08-08.html  11-58.html  14-26.html  16-31.html  18-09.html  19-40.html  22-14.html  23-47.html
reports/2026-04-25/: 01-30.html  02-06.html  03-29.html  04-08.html  05-13.html  06-09.html  07-07.html  08-04.html  11-40.html  14-06.html  15-52.html  17-28.html  18-12.html  19-12.html  20-02.html  21-43.html  23-09.html
reports/2026-04-26/: 00-05.html  01-09.html  02-05.html  03-27.html  04-02.html  05-05.html  06-02.html  07-05.html  08-03.html  12-03.html  14-23.html  16-02.html  17-31.html  18-25.html  19-11.html  20-04.html  21-46.html  23-08.html
reports/2026-04-27/: 00-06.html  01-10.html  02-05.html  03-28.html  04-03.html  05-05.html  06-03.html  07-07.html  08-04.html  12-07.html  15-15.html  17-38.html  20-07.html  22-34.html
reports/2026-04-28/: 01-06.html  02-49.html  04-39.html  06-13.html  07-28.html  08-12.html  12-13.html  15-14.html  17-42.html  20-10.html  23-04.html
reports/2026-04-29/: 01-12.html  03-07.html  04-47.html  06-31.html  07-31.html  09-17.html  12-52.html  15-38.html  18-25.html  20-02.html  22-38.html
reports/2026-04-30/: 01-01.html  02-55.html  04-40.html  06-31.html  07-29.html  09-16.html  12-55.html  15-42.html  18-25.html  19-58.html  22-33.html
reports/2026-05-01/: 00-06.html  01-51.html  03-57.html  05-33.html  06-31.html  07-29.html  08-13.html  12-36.html  15-41.html  18-06.html  19-39.html  22-00.html  23-33.html
reports/2026-05-02/: 00-34.html  02-39.html  04-28.html  05-25.html  06-12.html  07-28.html  08-13.html  12-00.html  14-25.html  16-09.html  17-42.html  19-14.html  20-07.html  21-53.html  23-12.html
reports/2026-05-03/: 00-10.html  01-24.html  02-10.html  03-35.html  05-08.html  (+18 more)
scripts/: migrate_reports_to_hub.py
tests/: conftest.py  test_ai_client.py  test_ai_parse.py  test_analyzer.py  test_crawler_base.py  test_crawler_pool.py  test_crawler_registry.py  test_dispatcher.py  test_frequency_loader.py  test_history.py  test_loader.py  test_middleware.py  test_mode_strategies.py  test_notification_service.py  test_pipeline.py  test_pydantic_config.py  test_pydantic_legacy_dict.py  test_report_helpers_formatter.py  test_splitter.py  test_storage_boto3_guard.py  test_trend.py  test_utils_time.py  test_webui_app_jobs.py  test_webui_auth.py  test_webui_job_manager.py
trendradar/: __init__.py  __main__.py  context.py
(+728 files in other folders)
