[project]
name = "trendradar"
version = "5.5.3"
description = "TrendRadar - 热点新闻聚合与分析工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "PyYAML>=6.0.3,<7.0.0",
    "fastmcp>=2.14.0,<3.0.0",
    "websockets>=15.0.1,<16.0.0",
    "feedparser>=6.0.0,<7.0.0",
    "litellm>=1.57.0,<2.0.0",
    "tenacity>=9.0,<10",
    "flask>=3.0.0,<4.0.0",
    "mcp>=1.23.0,<2.0.0",
    "structlog>=24.0.0,<26.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
trendradar = "trendradar.__main__:main"
trendradar-mcp = "mcp_server.server:run_server"

[project.optional-dependencies]
s3 = ["boto3>=1.35.0,<2.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=7.0,<8",
    "responses>=0.25,<1",
    "pytest-randomly>=3.15,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trendradar", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "output", "_image"]
# Coverage ratchet: floor set to current baseline (27%). Only raise, never lower.
# Phase 3+ tests will push this higher. See 02-VERIFICATION.md for context.
addopts = "--cov=trendradar --cov=mcp_server --cov-fail-under=27"

[tool.coverage.run]
branch = true
source = ["trendradar", "mcp_server"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
    "trendradar/webui/templates/*",
    "trendradar/webui/static/*",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "output",
    "_image",
]

[tool.ruff.lint]
select = [
    "I",    # isort
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
# Pragmatic ignores for Chinese-language project
ignore = [
    "RUF001",  # ambiguous-unicode-character-string (Chinese chars intentional)
    "RUF002",  # ambiguous-unicode-character-docstring (Chinese docs intentional)
    "RUF003",  # ambiguous-unicode-character-comment (Chinese comments intentional)
    "E501",    # line-too-long (incremental fix, not blocking)
    "E722",    # bare-except (legacy code, future refactoring)
    "E402",    # module-import-not-at-top-of-file (test fixtures need specific order)
    "B034",    # re-split-positional-args (legacy code, incremental fix)
    "B027",    # empty-method-without-abstract-decorator (optional hook pattern)
    "B904",    # raise-without-from-inside-except (legacy code)
    "B007",    # unused-loop-control-variable (readability preference)
    "SIM102",  # collapsible-if (readability preference)
    "SIM105",  # suppressible-exception (explicit is clearer)
    "SIM108",  # if-else-block-instead-of-if-exp (readability preference)
    "RUF012",  # mutable-class-default (incremental fix)
    "RUF034",  # useless-if-else (minor issue, incremental fix)
]

[tool.ruff.lint.isort]
known-first-party = ["trendradar", "mcp_server"]
